deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-app-deployment
  namespace: solar-app
  labels:
    app: solar-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: solar-app
  template:
    metadata:
      labels:
        app: solar-app
    spec:
      containers:
      - name: solar-app
        image: siddharth67/solar-system:v3
        ports:
        - containerPort: 80
